--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexbradshaw/Wobal.git"
+    "url": "git+https://github.com/minprocess/Wobal.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alexbradshaw/Wobal/issues"
+    "url": "https://github.com/minprocess/Wobal/issues"
   },
-  "homepage": "https://github.com/alexbradshaw/Wobal#readme",
+  "homepage": "https://github.com/minprocess/Wobal#readme",
   "dependencies": {
     "badwords": "^1.0.0",
     "bcrypt": "^5.0.1",
@@ -32,5 +32,8 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
