--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "homepage": "https://github.com/minprocess/Wobal#readme",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.609.0",
+    "@aws-sdk/client-s3": "^3.620.0",
+    "@aws-sdk/s3-request-presigner": "^3.609.0",
+    "aws-sdk": "^2.1654.0",
     "badwords": "^1.0.0",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.1",
@@ -29,11 +33,13 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
-    "mysql2": "^2.2.5",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.10.2",
     "nodemon": "^2.0.7",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "prettier": "^3.3.3"
   }
 }
